kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otushomework1-service
spec:
  selector:
    app: otushomework1
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
